objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>CnP_PaaS__Discount__c</fullName>
        <label>C&amp;P Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__Tax_Deductible__c</fullName>
        <label>C&amp;P Tax Deductible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__Tax__c</fullName>
        <label>C&amp;P Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>